--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 termcolor = "1.4.1"
 uwuify = { git = "https://github.com/RegenJacob/uwu/" }
+
+[package.metadata.cargo-machete]
+ignored = ["uwuify"]
+
